<resources>
    <string name="app_name">SummerSchoolApp</string>
    <string name="app_info">Aplikacija je namijenjena građanima, kako bi mogli prijaviti kvarove, izraziti svoje mišljenje i informirati se o aktualnim temama.</string>
    <string name="app_info_login">Prijava putem email-a</string>
    <string name="button_continue">Nastavi</string>
    <string name="sign_in">Prijavi me</string>
    <string name="register_with_oib">Registriraj se putem OIB-a</string>
    <string name="please_enter_info">Molimo upišite tražene podatke kako biste pristupili usluzi koju nudimo.</string>
    <string name="password">Lozinka:</string>
    <string name="email">email:</string>
    <string name="welcome_back">Dobro došli nazad!</string>
    <string name="enter_data">Molimo vas upišite tražene podatke kako bi vas uspješno spojili sa servisom.</string>
    <string name="welcome">Dobrodošli i još se bolje snašli!</string>
    <string name="oib">OIB:</string>
    <string name="button_register">Registriraj me</string>
    <string name="hide_password">Tappom na ikonu otkrivate i skrivate lozinku</string>
    <string name="login_congrats">Čestitamo, uspješno ste se prijavili na sustav Moj Grad!</string>
    <string name="btn_try_again">Pokušaj ponovno</string>
    <string name="text_try_again">Oo ne, nešto je krenulo po krivom, pokušajte ponovno!</string>
    <string name="error_unauthorised">Korisnik nije autoriziran.</string>
    <string name="remember_me">Zapamti me</string>
    <string name="forget_me">Zaboravi me</string>
    <string name="news">Vijesti</string>
    <string name="requests">Zahtjevi</string>
    <string name="profile">Profil</string>
    <string name="users">Korisnici</string>
    <string name="wrong_password">Kriva lozinka!</string>
    <string name="user_doesnt_exist">Korisnik ne postoji!</string>
    <string name="not_an_email">Nije email!</string>
    <string name="oib_already_in_use">OIB se već koristi!</string>
    <string name="oib_error_11_characters">OIB mora imati 11 znakova</string>
    <string name="placeholder">placeholder</string>
    <string name="loading">Loading...</string>
    <string name="profile_picture">Profilna slika:</string>
    <string name="name_surname">Ime i prezime:</string>
    <string name="create_user">Kreiraj korisnika</string>
    <string name="new_user">Novi korisnik</string>
    <string name="back">Nazad</string>
    <string name="ok">Ok</string>
    <string name="error">Error</string>
    <string name="plsea_fill_out_all_fields">Molimo popunite sva polja!</string>
    <string name="admin_email_test">ivici22i@gmail.com</string>
    <string name="email_in_use">Email se već koristi</string>
    <string name="token">token</string>
    <string name="wrong_email">Krivi email!</string>
    <string name="success">Uspjeh!</string>
    <string name="user_successfully_created">Korisnik je uspješno stvoren!</string>
    <string name="password_more_than_1_char">Lozinka mora imati više od jednog znaka!</string>
    <string name="no_news_published">Niti jedna vijest još\nnije objavljena!</string>
    <string name="publish_news">Objavi vijest</string>
    <string name="no_request_sent">Niti jedan zahtjev\njoš nije poslan!</string>
    <string name="new_request">Novi zahtjev</string>
    <string name="logout">Odjavi se</string>
    <string name="forgotten_password_text">U slučaju da ste zaboravili lozinku, ovdje\n ju možete resetirati ili promijeniti.</string>
    <string name="button_forgotten_password">Zaboravio/la sam lozinku</string>
    <string name="new_password">Nova lozinka:</string>
    <string name="repaet_new_password">Ponovite novu lozinku:</string>
    <string name="change_password">Promijeni</string>
    <string name="enter_info_request">Molimo vas upišite tražena podatke kako bismo mogli poslati zahtjev</string>
    <string name="request_title">Naslov:</string>
    <string name="request_type">Tip:</string>
    <string name="request_message">Poruka:</string>
    <string name="request_location">Lokacija:</string>
    <string name="request_enter_adress">Upišite adresu ovdje...</string>
    <string name="send_request">Pošalji zahtjev</string>
    <string name="new_news">Nova vijest</string>
    <string name="photo">Fotografije:</string>
    <string name="text">Tekst:</string>
    <string name="documents">Dokumenti:</string>
    <string name="logout_success">Uspješno odjavljeni!</string>
    <string name="edit_user">Edit korisnika</string>
    <string name="edit_user_button">Promijeni korisnika</string>
    <string name="user_successfully_edited">Korisnik je uspješno promijenjen!</string>
    <string name="request_created">Request created successfully!</string>

    <string-array name="requestArray">
        <item>Prijedlog</item>
        <item>Kvar</item>
    </string-array>

    <string-array name="requestFilter">
        <item>Sve</item>
        <item>Prijedlog</item>
        <item>Kvar</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="failed_to_load">Failed to load picture</string>
    <string name="all">Sve</string>
    <string name="edit_request">Uredi zahtjev</string>
    <string name="save_request_edit">Spremi izmjene</string>
    <string name="request_edit_success">Zahtjev uspješno izmijenjen!</string>
    <string name="news_created">Vijest uspješno objavljena!</string>
    <string name="news_edited_success">Vijest uspješno izmijenjena!</string>
    <string name="edit_news">Izmjena vijesti</string>
    <string name="edit_profile_success">Korisnik je uspješno izmijenjen!</string>
    <string name="input_to_change">Input data to change...</string>
    <string name="cancel">Cancel</string>
    <string name="set_name">Postavite ime</string>
    <string name="enter_required_fields">Molimo ispunite sva potrebna polja!</string>
</resources>
